# CTI-Aggregator

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
api/: requirements.txt
backend/: config.py  database.py  main.py
backend/connectors/: alienvault_otx.py  base.py  malwarebazaar.py  misp.py  urlhaus.py
backend/ml/: features.py  predict.py  training.py
backend/models/: __init__.py  anomaly_flag.py  feed_run.py  indicator.py  ml_prediction.py  scan_history.py
backend/routers/: anomalies.py  dashboard.py  feeds.py  indicators.py  predictions.py
backend/schemas/: anomaly.py  dashboard.py  feed.py  indicator.py  prediction.py
backend/services/: detection.py  ingestion.py  normalization.py
backend/utils/: logging.py  rate_limiter.py  retry.py
docs/: PLAN.md
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: FeedStatusPanel.jsx  Layout.jsx  SeverityChart.jsx  Sidebar.jsx  StatsCard.jsx  ThreatTable.jsx  TimelineChart.jsx
frontend/src/hooks/: useApi.js
frontend/src/pages/: Anomalies.jsx  Dashboard.jsx  Indicators.jsx  Settings.jsx
scripts/: migrate.py  seed_db.py  train_model.py
tests/: conftest.py
tests/fixtures/: malwarebazaar_recent_sample.json  misp_event_sample.json  otx_pulse_sample.json  urlhaus_recent_sample.json
tests/integration/: test_anomalies_api.py  test_feeds_api.py  test_indicators_api.py  test_predictions_api.py
tests/unit/test_connectors/: test_misp.py  (+3 more)
(+4 files in other folders)
