[project]
name = "cti-aggregator"
version = "1.0.0"
description = "Automated Cyber Threat Intelligence Aggregator and Normalization Framework"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "joblib>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["backend"]
omit = ["tests/*", "backend/ml/models/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
